--- a/clients/cli/Cargo.toml
+++ b/clients/cli/Cargo.toml
@@ -32,6 +32,7 @@ clap = { version = "4.5", features = ["derive"] }
 crossterm = "0.29.0"
 ed25519-dalek = { version = "2", features = ["rand_core"] }
 home = "0.5.9"
+http = "1.3.1"
 iana-time-zone = "0.1.60"
 log = "0.4.26"
 nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm", tag = "0.3.4" }
