Increase max workers limit from 8 to 64
- Remove hardcoded 8-worker limit to support more node IDs
- Allow up to 64 concurrent proving threads with --max-threads
- Better utilization of multi-core systems and multiple nodes
- Fixes issue where large number of node IDs only used 8 workers

--- a/clients/cli/Cargo.toml
+++ b/clients/cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nexus-network"
-version = "0.9.0-c"
+version = "0.9.0-d"
 edition = "2024"
 rust-version = "1.85"
 build = "build.rs"
