--- a/clients/cli/Cargo.toml
+++ b/clients/cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nexus-network"
-version = "0.9.0-d"
+version = "0.9.0-e"
 edition = "2024"
 rust-version = "1.85"
 build = "build.rs"
